name:                phone
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mikebohdan/phone
license:             BSD3
license-file:        LICENSE
author:              Mike Bohdan
maintainer:          bohdan.mikhail@google.com
copyright:           2017 Mike Bohdan
category:            DSL
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  hs-source-dirs:      src
  exposed-modules:     Grammar
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable phone
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , phone
